# nixos-ami-upload

./: Cargo.toml  README.md
src/: main.rs
